[gd_scene load_steps=13 format=3 uid="uid://c0w4rux4knfcp"]

[ext_resource type="Script" uid="uid://o57g44ps88y3" path="res://rhythmgame_folder/rhythmgame_scripts/rg_menu_scripts/difficulty_menu.gd" id="1_rgywp"]
[ext_resource type="Texture2D" uid="uid://x5jnceo0jflh" path="res://rhythmgame_folder/rhythmgame_assets/images/neon_glitch.jpg" id="2_5cu46"]
[ext_resource type="FontFile" uid="uid://dbhmrndrp70h0" path="res://rhythmgame_folder/rhythmgame_assets/font/game_over.ttf" id="2_6ht78"]
[ext_resource type="AudioStream" uid="uid://dpt2wsucjkya1" path="res://rhythmgame_folder/rhythmgame_assets/music/soundEffects/button_click.mp3" id="4_8wdma"]
[ext_resource type="Script" uid="uid://o7yoiegrsp2v" path="res://rhythmgame_folder/rhythmgame_scripts/rg_menu_scripts/button_sound.gd" id="4_e5avv"]
[ext_resource type="FontFile" uid="uid://cuy0sid5rllod" path="res://rhythmgame_folder/rhythmgame_assets/font/PixelifySans-VariableFont_wght.ttf" id="6_1v26m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cu46"]
bg_color = Color(0.18039216, 0.16078432, 0.30588236, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5avv"]
bg_color = Color(0.101960786, 0.08627451, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8wdma"]
bg_color = Color(0.23921569, 0.20784314, 0.46666667, 1)

[sub_resource type="Animation" id="Animation_e5avv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EasyButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1168, 142)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MediumButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1169, 309)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HardButton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1171, 475)]
}

[sub_resource type="Animation" id="Animation_5cu46"]
resource_name = "bounce_in_from_right"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EasyButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1168, 142), Vector2(682, 147)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MediumButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1169, 309), Vector2(685, 307)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HardButton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1171, 475), Vector2(688, 468)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e5avv"]
_data = {
&"RESET": SubResource("Animation_e5avv"),
&"bounce_in_from_right": SubResource("Animation_5cu46")
}

[node name="DifficultyMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rgywp")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 653.0
texture = ExtResource("2_5cu46")
expand_mode = 2

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 272.0
offset_right = 639.0
offset_bottom = 361.0
theme_override_fonts/font = ExtResource("2_6ht78")
theme_override_font_sizes/font_size = 156
text = "Choose Difficulty"

[node name="EasyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1168.0
offset_top = 142.0
offset_right = 1467.0018
offset_bottom = 200.99997
theme_override_fonts/font = ExtResource("2_6ht78")
theme_override_font_sizes/font_size = 89
theme_override_styles/normal = SubResource("StyleBoxFlat_5cu46")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e5avv")
theme_override_styles/hover = SubResource("StyleBoxFlat_8wdma")
text = "Easy"
expand_icon = true

[node name="MediumButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1169.0
offset_top = 309.0
offset_right = 1467.0012
offset_bottom = 367.9997
theme_override_fonts/font = ExtResource("2_6ht78")
theme_override_font_sizes/font_size = 89
theme_override_styles/normal = SubResource("StyleBoxFlat_5cu46")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e5avv")
theme_override_styles/hover = SubResource("StyleBoxFlat_8wdma")
text = "Medium"
expand_icon = true

[node name="HardButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1171.0
offset_top = 475.0
offset_right = 1469.9974
offset_bottom = 534.00366
theme_override_fonts/font = ExtResource("2_6ht78")
theme_override_font_sizes/font_size = 89
theme_override_styles/normal = SubResource("StyleBoxFlat_5cu46")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e5avv")
theme_override_styles/hover = SubResource("StyleBoxFlat_8wdma")
text = "Hard"
expand_icon = true

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 154.0
offset_top = 502.0
offset_right = 285.0
offset_bottom = 549.0
theme_override_fonts/font = ExtResource("2_6ht78")
theme_override_font_sizes/font_size = 67
theme_override_styles/normal = SubResource("StyleBoxFlat_5cu46")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e5avv")
theme_override_styles/hover = SubResource("StyleBoxFlat_8wdma")
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_e5avv")
}
autoplay = "bounce_in_from_right"

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8wdma")
script = ExtResource("4_e5avv")

[node name="BlueButton" type="Polygon2D" parent="."]
position = Vector2(132.99998, 288)
scale = Vector2(0.5735945, 0.64791995)
color = Color(0, 0, 1, 1)
polygon = PackedVector2Array(406, 344, 385, 343, 368, 353, 365, 368, 369, 379, 380, 388, 396, 389, 410, 384, 417, 374, 417, 362, 412, 350)

[node name="Label" type="Label" parent="BlueButton"]
offset_left = 439.33478
offset_top = 341.0915
offset_right = 606.7004
offset_bottom = 391.0915
theme_override_fonts/font = ExtResource("6_1v26m")
theme_override_font_sizes/font_size = 41
text = "- Down"

[node name="GreenButton" type="Polygon2D" parent="."]
position = Vector2(302.00003, 288)
scale = Vector2(0.5735945, 0.64791995)
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(406, 344, 385, 343, 368, 353, 365, 368, 369, 379, 380, 388, 396, 389, 410, 384, 417, 374, 417, 362, 412, 350)

[node name="Label" type="Label" parent="GreenButton"]
offset_left = 441.07806
offset_top = 339.54813
offset_right = 608.44366
offset_bottom = 389.54813
theme_override_fonts/font = ExtResource("6_1v26m")
theme_override_font_sizes/font_size = 41
text = "- Up"

[connection signal="pressed" from="EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="HardButton" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
